copyparty/web/browser.css
/* ... */
#ggrid>a[tt]:focus,
#ggrid>a[tt]:hover {
	background: var(--g-f-bg);
}
#ggrid>a.play,
#ggrid>a[tt].play {
	color: var(--g-sel-fg);
	background: #fc0;
	background: var(--g-play-bg);
	border-color: var(--g-play-b1);
	border-top: 1px solid var(--g-play-b2);
	box-shadow: 0 .1em 1.2em var(--g-play-sh);
}
#files tbody tr.sel td,
#ggrid>a.sel,
#ggrid>a[tt].sel {
	color: var(--g-sel-fg);
	background: #f3c;
	background: var(--g-sel-bg);
	border-color: var(--g-sel-b1);
}
#ggrid>a.sel>span {
	color: var(--g-sel-fg);
}
#ggrid>a.sel,
#ggrid>a[tt].sel {
	border-top: 1px solid var(--g-fsel-b1);
	box-shadow: 0 .1em 1.2em var(--g-sel-sh);
	transition: all 0.2s cubic-bezier(.2, 2.2, .5, 1); /* https://cubic-bezier.com/#.4,2,.7,1 */
}
#files tbody tr.sel:hover td,
#files tbody tr.sel:focus td,
#ggrid>a.sel:hover,
#ggrid>a.sel:focus {
	color: var(--g-sel-fg);
	background: var(--g-fsel-bg);
	border-color: var(--g-fsel-b1);
	text-shadow: 1px 1px 0 var(--g-fsel-ts);
}
#ggrid>a.sel img,
#ggrid>a.play img {
	opacity: .7;
	filter: contrast(130%) brightness(107%);
}
#ggrid>a.sel img {
	box-shadow: 0 0 1em var(--g-sel-sh);
}
#ggrid>a.play img {
	box-shadow: 0 0 1em var(--g-play-sh);
}
#ggrid a {
	scroll-margin-top: 25vh;
	scroll-margin-bottom: 20vh;
}
#files tr.sel a,
#files tr.sel a.play {
	color: var(--fg2-max);
}
#files tr.sel a:hover {
	color: var(--fg-max);
	text-shadow: none;
}
#files tr.sel a.play.act {
	text-shadow: 0 0 1px var(--fg2-max);
}
#files tr:focus {
	outline: none;
	position: relative;
}
#files tr:focus td+td {
	background: var(--bg-d3);
	box-shadow: 0 .2em 0 var(--f-sel-sh), 0 -.2em 0 var(--f-sel-sh);
}
#files tr:focus:not(.play):not(.sel) td:first-child {
	background: var(--bg-d3);
	box-shadow: -.2em .2em 0 var(--f-sel-sh), -.2em -.2em 0 var(--f-sel-sh);
}
#player {
	display: none;
}
#widget {
	position: fixed;
	font-size: 1.4em;
	left: 0;
	right: 0;
	bottom: -6em;
	height: 6em;
	width: 100%;
	z-index: 3;
	touch-action: none;
}
#widget.anim {
	transition: bottom 0.15s;
}
#widget.open {
	box-shadow: 0 0 1em rgba(0,48,64,0.2);
	bottom: 0;
}
html.y #widget.open {
	border-top: .2em solid var(--bg-u2);
}
#widgeti {
	position: relative;
	z-index: 10;
	width: 100%;
	height: 100%;
}
#fshr,
#wtgrid,
#wtico {
	position: relative;
	font-size: .9em;
	top: -.04em;
}
#wtgrid {
	font-size: .75em;
	padding: .1em;
	top: -.12em;
}
#wtico {
	cursor: url(dd/4.png), pointer;
	animation: cursor 500ms;
}
#wtico:hover {
	animation: cursor 500ms infinite;
}
@keyframes cursor {
	 0% {cursor: url(dd/2.png), pointer}
	30% {cursor: url(dd/3.png), pointer}
	50% {cursor: url(dd/4.png), pointer}
	75% {cursor: url(dd/5.png), pointer}
	85% {cursor: url(dd/4.png), pointer}
}
@keyframes spin {
	100% {transform: rotate(360deg)}
}
@keyframes fadein {
	0% {opacity: 0}
	100% {opacity: 1}
}
#wtoggle {
	position: absolute;
	white-space: nowrap;
	top: -1em;
	right: 0;
	height: 1em;
	font-size: 2em;
	line-height: 1em;
	text-align: center;
	text-shadow: none;
	box-shadow: 0 0 .5em var(--mp-sh);
	border-radius: .3em 0 0 0;
	padding: 0 0 0 .1em;
	color: var(--fg-max);
}
#wtoggle,
#widgeti {
	background: #fff;
	background: var(--bg-u3);
}
#wfs, #wfm, #wzip, #wnp {
	display: none;
}
#wfs, #wzip, #wnp {
	margin-right: .2em;
	padding-right: .2em;
	border: 1px solid var(--bg-u5);
	border-width: 0 .1em 0 0;
}
#wfm.act+#wzip,
#wfm.act+#wzip+#wnp {
	margin-left: .2em;
	padding-left: .2em;
	border-left-width: .1em;
}
#wfs.act,
#wfm.act {
	display: inline-block;
}
#wtoggle,
#wtoggle * {
	line-height: 1em;
}
#wtoggle.sel #wzip,
#wtoggle.np #wnp {
	display: inline-block;
}
#wtoggle.sel.np #wnp {
	display: none;
}
#wfm a,
#wnp a,
#wzip a {
	font-size: .5em;
	padding: 0 .3em;
	margin: -.3em .1em;
	position: relative;
	display: inline-block;
}
#wfs {
	font-size: .36em;
	text-align: right;
	line-height: 1.3em;
	padding: 0 .3em 0 0;
	border-width: 0 .25em 0 0;
}
#wfm span,
#wnp span {
	font-size: .6em;
	display: block;
}
#wnp span {
	font-size: .7em;
}
#wfm a:not(.en) {
	opacity: .3;
	color: var(--fm-off);
}
#wfm a.hide {
	display: none;
}
#files tbody tr.fcut td,
#ggrid>a.fcut {
	animation: fcut .5s ease-out;
}
@keyframes fcut {
	0% {opacity:0}
	100% {opacity:1}
}
#ggrid>a.glow {
	animation: gexit .6s ease-out;
}
@keyframes gexit {
	0% {box-shadow: 0 0 0 2em var(--a)}
	100% {box-shadow: 0 0 0em 0em var(--a)}
}
#wzip a {
	font-size: .4em;
	margin: -.3em .1em;
}
#wtoggle.sel .l1 {
	top: -.6em;
	padding: .4em .3em;
}
#barpos,
#barbuf {
	position: absolute;
	bottom: 1em;
	left: 1em;
	height: 2em;
	border-radius: 9em;
	width: calc(100% - 2em);
}
#barbuf {
	background: var(--mp-b-bg);
	z-index: 21;
}
#barpos {
	box-shadow: -.03em -.03em .7em rgba(0,0,0,0.5) inset;
	z-index: 22;
}
#pctl {
	position: absolute;
	top: .5em;
	left: 1em;
}
#pctl a {
	display: inline-block;
	font-size: 1.25em;
	width: 1.3em;
	height: 1.2em;
	text-align: center;
	border-radius: .3em;
}
#pvol {
	position: absolute;
	top: .7em;
	right: 1em;
	height: 1.6em;
	border-radius: 9em;
	max-width: 12em;
	width: calc(100% - 10.5em);
	background: rgba(0,0,0,0.2);
}
#widget.cmp {
	height: 1.6em;
	bottom: -1.6em;
}
#widget.cmp.open {
	bottom: 0;
}
#widget.cmp #wtoggle {
	font-size: 1.2em;
}
#widget.cmp #fshr,
#widget.cmp #wtgrid {
	display: none;
}
#widget.cmp #pctl {
	top: 0;
	left: 0;
	font-size: .75em;
}
#widget.cmp #pctl a {
	margin: 0;
}
#widget.cmp #barpos,
#widget.cmp #barbuf {
	width: calc(100% - 11em);
	border-radius: 0;
	left: 5em;
	top: 0;
}
#widget.cmp #pvol {
	top: 0;
	right: 0;
	max-width: 5.8em;
	border-radius: 0;
}
.opview {
	display: none;
}
.opview.act {
	display: block;
}
#ops a {
	color: var(--a);
	text-shadow: 1px 1px 1px var(--op-a-sh);
	font-size: 1.5em;
	padding: .25em .4em;
	margin: 0;
}
#ops a.act {
	color: #fff;
	color: var(--op-aa-fg);
	background: #000;
	background: var(--op-aa-bg);
	border-radius: 0 0 .2em .2em;
	border-bottom: .3em solid var(--a-b);
	box-shadow: var(--op-aa-sh);
}
#ops a svg {
	width: 1.75em;
	height: 1.75em;
	margin: -.5em -.3em;
}
/* ... */

